added footer tag

--- a/index.html
+++ b/index.html
@@ -62,8 +62,8 @@
 
     </main>
 
-    <div class="footer">
-        <div>&copy; 2025 BigFootShadow4509</div>
-    </div>
+    <footer>
+        <p>&copy; 2025 BigFootShadow4509</p>
+    </footer>
 </body>
 </html>
